# atlas-rule-engine

./: README.md  pyproject.toml
atlas_rule_engine/: __init__.py  __main__.py  base_refactor.py  base_rule.py  engine.py  planner.py  policy.py
atlas_rule_engine/catalog/: __init__.py  artifact_coupling.py  cross_repo_triggers.py  heavy_shell.py  insecure_protocol.py  large_pipeline.py  missing_build_stage.py  missing_docs.py  missing_lint_stage.py  missing_notification.py  missing_test_stage.py  no_approval_gate.py  no_cache.py  no_parallelism.py  no_retry.py  no_timeout.py  privileged_runner.py  secret_exposure.py  sequential_stages.py  unpinned_images.py  untagged_artifact.py
atlas_rule_engine/refactors/: __init__.py
tests/: __init__.py  test_consumer.py  test_policy.py  test_refactors.py  test_rules.py
