[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-rule-engine"
version = "0.1.0"
description = "Rule Engine for PipelineAtlas — deterministic CI/CD checks with confidence scoring"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "atlas-sdk @ file:///${PROJECT_ROOT}/../atlas-sdk",
    "redis>=5.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
